@@ -1,3 +1,8 @@
+2003-07-10  Per Bothner  <per@bothner.com>
+
+	* MakeElement.java (compile):  Use new
+	ElementConstructor.compileUsingNodeTree method.
+
 2003-05-08  Per Bothner  <per@bothner.com>
 
 	* Debug.java:  New class.
